--- a/mystyle.css
+++ b/mystyle.css
@@ -219,7 +219,7 @@ border : 1px solid #323232;
 }
 
 .b, .c, .d, .menu, .news {
-background-color : #040404;
+background-color : #FFFFFF;
 background-image : url(/img/3068/3068008_1e2965b078.gif);
 background-repeat : repeat-x;
 background-position : 50%
