--- a/mystyle.css
+++ b/mystyle.css
@@ -1,4 +1,4 @@
-.bmenu1 { color: #FFA500; background-color: #0ddbd4; background-image: ; background-repeat: repeat-x; background-position: 50% top; margin-top: 1px; margin-bottom: 1px; padding: 1px; border: 1px solid #800080; }
+.bmenu1 { color: #FFA500; background-color: #000000; background-image: ; background-repeat: repeat-x; background-position: 50% top; margin-top: 1px; margin-bottom: 1px; padding: 1px; border: 1px solid #800080; }
 .code { color: #a9a9a9; background-color: #003366; background-repeat: repeat-x; background-position: 50% top; margin-top: 1px; margin-bottom: 1px; padding: 2px; border: 1px solid #800080; }
 .coklat1 { color: #bd0000; background-color: #050000; background-image: url(/img/200002/200002818_f27448bb27.gif); background-repeat: repeat-x; background-position: 10% bottom; margin-top: 1px; margin-bottom: 1px; padding: 2px; border: 1px solid #590000; }
 .content { background-color: #333333; color: #fdfdfd; padding-top: 2px; padding-bottom: 2px; padding- left: 4px; padding-right: 4px; border-width: 1px; border-color: #7f1a2a; border-style: solid; }
