--- a/mystyle.css
+++ b/mystyle.css
@@ -8,7 +8,7 @@ no-repeat; margin: 1px; padding: 4px; color: #
 eee; display: block; text-
 align: right; border: 1px solid #590000; }
 .gm { background: #2e4354; padding: 0px 0 2px 0; color: #ffffff; }
-.gm1 { background-color: #212121; margin-top: 1px; margin-bottom: 1px; padding: 2px; border: 1px solid #006600; }
+.gm1 { background-color: #FFFFFF; margin-top: 1px; margin-bottom: 1px; padding: 2px; border: 1px solid #006600; }
 .green { margin: 1px; margin-top: 1px; margin-bottom: 1px; text-align: none; font-weight: none; color: #00ff00; border: 1px #00ff00 solid; background-color: #007700; }
 .head { background-color: #FF0000; font-size: 18px; font-weight: none; color: #fff; padding: 3px; border: 0px solid #444; border-bottom: 1px solid
 orange; text-align: center; text-shadow: 1px 1px 2px #111; }
@@ -64,7 +64,7 @@ border : 1px solid #333333;
 input:hover, textarea:hover,
 select:hover {
 color : #8f8f8f;
-background-color : #212121;
+background-color : #FFFFFF;
 border : 1px solid #434343;
 }
 input:focus, textarea:focus,
@@ -211,7 +211,7 @@ padding : 2px;
 border : 1px solid #323232;
 }
 .list2 {
-background-color : #212121;
+background-color : #FFFFFF;
 margin-top : 1px;
 margin-bottom : 1px;
 padding : 2px;
