--- a/mystyle.css
+++ b/mystyle.css
@@ -74,8 +74,8 @@ background-color : #1c2900;
 border : 1px solid #385400;
 }
 body {
-color: #c99b9b;
-font-size : 12px;
+color: #0000ff;
+font-size : 16px;
 background-color : #000;
 
 margin : 0;
