--- a/mystyle.css
+++ b/mystyle.css
@@ -76,26 +76,28 @@ border : 1px solid #385400;
 body {
 color: #0000ff;
 font-size : 16px;
+ font-style: normal;
 background-color : #000;
 
 margin : 0;
 padding : 0;
 border : 1px solid #3b3b3b;
 margin: 0;
-font: 12px Arial;
+font: 16px Arial;
 margin: auto;
 max-width: 600px;
-
+font-style: normal;
 }
 form {
 font-size : small;
 margin : 0;
 padding : 0;
 }
-h1, h2, h3, h4, h5, h6 { font-size : 12px;
+h1, h2, h3, h4, h5, h6 { font-size : 16px;
 margin : 0;
 padding : 0;
 padding-bottom : 2px;
+ font-style: normal;
 }
 hr {
 margin-top : 2px;
