--- a/mystyle.css
+++ b/mystyle.css
@@ -305,4 +305,4 @@ border-bottom : 1px dotted #
 933400;
 }
 .image{position:relative}
-.png-over{position:absolute; top:400; left:400}
+.png-over{position:absolute; top:400px; left:400px}
